@@ -572,7 +572,7 @@ systemctl start mpd.socket</programlisting>
             <row>
               <entry>
                 <varname>mixer_type</varname>
-                <parameter>hardware|software|none</parameter>
+                <parameter>hardware|software|null|none</parameter>
               </entry>
               <entry>
                 Specifies which mixer should be used for this audio
@@ -580,7 +580,9 @@ systemctl start mpd.socket</programlisting>
                 linkend="alsa_output">ALSA</link>, <link
                 linkend="oss_output">OSS</link> and <link
                 linkend="pulse_output">PulseAudio</link>), the
-                software mixer or no mixer
+                software mixer, the "null" mixer
+                (<parameter>null</parameter>; allows setting the
+                volume, but with no effect) or no mixer
                 (<parameter>none</parameter>).  By default, the
                 hardware mixer is used for devices which support it,
                 and none for the others.
